--- a/build.yml
+++ b/build.yml
@@ -16,7 +16,7 @@ targets:
         options:
           create_field_map: true
           create_per_field_to_json: true
-      source_gen|combining_builder:
-        options:
-          ignore_for_file:
-            - "type=lint"
+      # source_gen|combining_builder:
+      #   options:
+      #     ignore_for_file:
+      #       - "type=lint"
